--- a/face_detection_using_webcam/ReadMe
+++ b/face_detection_using_webcam/ReadMe
@@ -1,4 +1,4 @@
-FACE DETECTION USING OPENCV AND PYTHON 
+FACE DETECTION USING OPENCV AND PYTHON (@Seeratpal K. Jaura )
 
 This detect_faces_video.py detect the faces via webcam 
 
